# toms-tools

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  update.rs
src/commands/: completions.rs  install.rs  list.rs  mod.rs  usage.rs
src/tools/: deps.rs  installer.rs  mod.rs  status.rs  usage.rs
tools/gh-unresolved/: install.sh  tool.toml  usage.md
tools/intent-pr-fixer/: install.sh  specialist.md  tool.toml  usage.md
