[package]
name = "toms-tools"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
comfy-table = "7.2.2"
dialoguer = "0.12.0"
include_dir = "0.7.4"
owo-colors = "4.3.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
which = "8.0.2"
